correction IE

--- a/waterquest/assets/css/styles.css
+++ b/waterquest/assets/css/styles.css
@@ -201,6 +201,7 @@ Une condition dépendante de la variable `$debug` qui permet d'afficher les cont
 html {
   font-size: 16px;
   height: 100%;
+  overflow-x: hidden;
   background: #000;
 }
 
