--- a/waterquest/assets/scss/base/_global.scss
+++ b/waterquest/assets/scss/base/_global.scss
@@ -80,6 +80,7 @@ $md-breakpoints: (
 html {
 	font-size: $font-size;
 	height: 100%;
+	overflow-x: hidden;
 	background: #000;
 
 	// Better font rendering for mac
